--- a/src/ROMdb/Views/LoginView.fxml
+++ b/src/ROMdb/Views/LoginView.fxml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.LoginController">
    <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0">
          <center>
@@ -27,29 +27,26 @@
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <HBox alignment="CENTER" prefHeight="40.0" prefWidth="580.0">
-                     <children>
-                        <Label fx:id="label_userName" minWidth="65.0" text="User Name:">
-                           <HBox.margin>
-                              <Insets right="5.0" />
-                           </HBox.margin>
-                        </Label>
-                        <ChoiceBox fx:id="choicebox_userName" prefWidth="150.0" />
-                     </children>
+                  <ComboBox fx:id="combo_username" onAction="#enablePasswordField" prefWidth="150.0" promptText="Username">
                      <VBox.margin>
-                        <Insets top="20.0" />
+                        <Insets top="25.0" />
                      </VBox.margin>
-                  </HBox>
-                  <HBox alignment="CENTER" prefHeight="40.0" prefWidth="580.0">
-                     <children>
-                        <Label fx:id="label_password" minWidth="65.0" text="Password: ">
-                           <HBox.margin>
-                              <Insets right="5.0" />
-                           </HBox.margin>
-                        </Label>
-                        <PasswordField fx:id="passfield_password" />
-                     </children>
-                  </HBox>
+                  </ComboBox>
+                  <PasswordField fx:id="passfield_password" disable="true" maxWidth="150.0" onAction="#loginButtonClicked" promptText="Password">
+                     <VBox.margin>
+                        <Insets bottom="10.0" top="10.0" />
+                     </VBox.margin>
+                  </PasswordField>
+                  <Label fx:id="label_loginmessage">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Button fx:id="button_login" mnemonicParsing="false" onAction="#loginButtonClicked" prefWidth="75.0" text="Login">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </Button>
                </children>
             </VBox>
          </center>
